--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
  </script>
  <noscript><div><img src="https://mc.yandex.ru/watch/96513057" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
  <!-- /Yandex.Metrika counter -->
-    <title>Islam GoldHEN 900</title>
+    <title>LevelUP GoldHEN 900</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body 
         {
             background-image: url("host.jpg");
-            height: 80%;
+            height: 100%;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
