--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <style>
         body 
         {
-            background-image: url("img/host.jpg");
+            background-image: url("host.jpg");
             height: 100%;
             background-position: center;
             background-repeat: no-repeat;
